--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,1 +1,15 @@
-<h1>Topページ</h1>
+<h1>Welcome to Bookers!</h1>
+
+In Bookers,
+
+you can share and exchange your opinions , inpressions , and emotions
+
+about various books!
+
+
+<div class="auth-links">
+  <%= link_to 'Login', new_user_session_path %> |
+  <%= link_to 'Sign up', new_user_registration_path %>
+</div>
+
+CopyRight Infratop.inc
