--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,15 +1,23 @@
-<h1>Welcome to Bookers!</h1>
+<h1>Welcome to <i class="fa-solid fa-book"> </i> Bookers!!</h1>
+<p>In <i class="fa-solid fa-book"></i> Bookers,</p>
 
-In Bookers,
+<p>you can share and exchange your opinions , inpressions , and emotions</p>
 
-you can share and exchange your opinions , inpressions , and emotions
-
-about various books!
+<p>about various books!</p>
 
 
 <div class="auth-links">
-  <%= link_to 'Login', new_user_session_path %> |
-  <%= link_to 'Sign up', new_user_registration_path %>
+  <%= link_to 'Login', new_user_session_path, class: "btn btn-info btn-sm btn-block mb-3" %> |
+  <%= link_to 'Sign up', new_user_registration_path, class: "btn btn-success btn-sm btn-block mb-3" %>
 </div>
 
-CopyRight Infratop.inc
+
+<p id="notice"></p>
+<div class="container">
+  <div class="row">
+    <div class="mx-auto col-11 col-sm-10 col-lg-8 col-xl-6"></div>
+</div>
+
+<footer>
+  <p>CopyRight Infratop.inc</p>
+</footer>
