--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
   <% end %>
 
     <!-- xxxxxxxxxxには自身のKitCodeのIDが入ります  -->
-    <script src="https://kit.fontawesome.com/xxxxxxxxxx.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/4c018c7cce.js" crossorigin="anonymous"></script>
     <%= stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
@@ -23,24 +23,36 @@
   <body>
   <header>
   <% if user_signed_in? %>
-    <li>
+  <div class="p-3 mb-2 bg-dark text-white">.bg-dark</div>
+    <li class="nav-item">
       <%= link_to "Bookers",root_path %>
-    </li>
-    <li>
-      <%= link_to "Home", root_path %>
-    </li>
-    <li>
-      <%= link_to "About", about_path  %>
-    </li>
-    <%= link_to "Sign up", new_user_registration_path %>
-    </li>
-    <%= link_to "Log in", new_user_session_path %>
-    </li>
+    </class=>
+
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container-fluid">
+      <%= link_to "Bookers", root_path, class: "navbar-brand" %>
+  
+      <div class="collapse navbar-collapse justify-content-end">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <%= link_to "Home", root_path, class: "nav-link" %>
+          </li>
+          <li class="nav-item">
+            <%= link_to "Users", about_path, class: "nav-link" %>
+          </li>
+          <li class="nav-item">
+            <%= link_to "Books", new_user_registration_path, class: "nav-link" %>
+          </li>
+          <li class="nav-item">
+            <%= link_to "Log out", new_user_session_path, class: "nav-link" %>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
   <% end %>
   </header>
     <%= yield %>
   </body>
 </html>
-
-<main>
-    <div class="flash-message notice">投稿に成功しました。</div>
