--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,8 +5,62 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
+    <meta name="viewport" content="width=device-width,initial-scale=1 maximum-scale=1">
+    <link href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet"
+    
+    <script src="https://kit.fontawesome.com/4c018c7cce.js" crossorigin="anonymous"></script>
+    <%= stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+  </head>
+    
+  <body>
+  <div class="container-fluid bg-secondary">
+    <div class="header row px-5 py-4"
+      <div class="col-3 d-flex justify-content-strat">
+       <%= link_to "Bookers", root_path, style: 'color: white;' %>
+      </div>
 
-    <% if user_signed_in? %>
+      <div class="col-6 offset-3 d-flex justify-content-end">
+        <div class="d-flex">
+           <% if user_signed_in? %>
+
+           <%= link_to user_path(current_uswe.id), class: 'text-white mr-3' do %>
+             <i class="fa-solid fa-house"></i>Home
+           <% end %>
+           
+           <%= link_to users_path, class: 'text-white mr-3' do %>
+             <i class="fa-solid fa-house"></i>Users
+           <% end %>
+           <%= link_to users_path, class: 'text-white mr-3' do %>
+             <i class="fa-solid fa-book-open"></i>Books
+           <% end %>
+           <%= link_to destroy_user_session_path, method: :delete, class: 'text-white mr-3' do %>
+             <i class="fa-solid fa-right-from-bracket"></i>Log out
+           <% end %>
+         <% else %>
+           <%= link_to root_path, class: 'text-white mr-3' do %>
+             <i class="fa-solid fa-house"></i>Home
+           <% end %>
+           <%= link_to about_path, class: 'text-white mr-3' do %>
+             <i class="fa-solid fa-link"></i>About
+           <% end %>
+           <%= link_to new_user_registration_path, class: 'text-white mr-3' do %>
+             <i class="fa-solid fa-user-plus"></i>Sign up
+           <% end %>
+             <%= link_to new_user_session_path, class: 'text-white' do %>
+             <i class="fa-solid fa-right-to-bracket"></i>Log in
+           <% end %>
+        <% end %>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+
+
+
+
   <p><%= current_user.name %> さん</p>
   <%= link_to 'Log out', destroy_user_session_path, method: :delete %>
   <% else %>
@@ -15,11 +69,6 @@
   <% end %>
 
     <!-- xxxxxxxxxxには自身のKitCodeのIDが入ります  -->
-    <script src="https://kit.fontawesome.com/4c018c7cce.js" crossorigin="anonymous"></script>
-    <%= stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
-  </head>
-
   <body>
   <header>
   <% if user_signed_in? %>
@@ -29,7 +78,7 @@
     </class=>
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container-fluid">
+    
       <%= link_to "Bookers", root_path, class: "navbar-brand" %>
   
       <div class="collapse navbar-collapse justify-content-end">
