--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,13 +1,13 @@
-<h1>Welcome to <i class="fa-solid fa-book"> </i> Bookers!!</h1>
-<p>In <i class="fa-solid fa-book"></i> Bookers,</p>
+<h1>Welcome to <i class="fas fa-book"></i> Bookers!!</h1>
+<p>In <i class="fas fa-book"></i> Bookers,</p>
 
-<p>you can share and exchange your opinions , inpressions , and emotions</p>
+<p>you can share and exchange your opinions, impressions, and emotions</p>
 
 <p>about various books!</p>
 
 
 <div class="auth-links">
-  <%= link_to 'Login', new_user_session_path, class: "btn btn-info btn-sm btn-block mb-3" %> |
+  <%= link_to 'Login', new_user_session_path, class: "btn btn-info btn-sm btn-block mb-3" %>
   <%= link_to 'Sign up', new_user_registration_path, class: "btn btn-success btn-sm btn-block mb-3" %>
 </div>
 
@@ -16,6 +16,7 @@
 <div class="container">
   <div class="row">
     <div class="mx-auto col-11 col-sm-10 col-lg-8 col-xl-6"></div>
+  </div>
 </div>
 
 <footer>
