--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,30 @@
 <!-- app/views/users/show.html.erb -->
+<head>
+  <body>
+    <main>
+      <p id="notice">Signed in successfully.</p>
+       <div class="container px-5 px-sm-0">
+        <div class="row">
+         <div class="col-md-3">
+           <h2>User info</h2>
+           <table class="table"></table>
+           <div class="row"></div>
+           <h2 class="mt-3">New book</h2>
+           <from action="/bookers2/books" accept-charset="UTF-8" method="post"></from>
+         </div>
+         <div class="col-md-8 offset-md-1"></div> 
+       </div>
+     </div>
+   </main>     
+   <footer>
+     <div class="container mt-5">
+      <div class="row"></div>
+     </div>
+   </footer>  
+
+
+
+
 <h2>タイトル</h2>
 <% @books.each do |book| %>
   <p><%= book.title %></p>
