--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,28 @@
 <h1>投稿一覧</h1>
 <% @users.each do |user| %>
+  <p id="notice"><%= notice %></P>
+
+   <h1>User info</h1>
+
+   <div class="container">
+    <div class="row">
+     <div class="col-lg-4">
+    </div>   
+    <div class="col-lg-8">
+       <table class="table table-striped">
+            <thead>
+                <tr>
+                  <th>Books</th>
+                  <th>Title</th>
+                  <th>Opinion</th>
+                  <th colspan="2"></th>
+                </tr>
+            </thead>
+       <tbody>     
+
+
+
+
 
     <p>タイトル</p>
     <span>
