--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,17 +2,29 @@
 <head>
   <body>
     <main>
-      <p id="notice">Signed in successfully.</p>
+      <p id="notice">welcome! You have signed up  successfully.</p>
        <div class="container px-5 px-sm-0">
         <div class="row">
          <div class="col-md-3">
            <h2>User info</h2>
+           <% if @user.image.attached? %>
+            <%= image_tag @user.image, size: "100x100" %>
+            <% else %>
+             <%= image_tag "no_image", size: "100x100" %>
+           <% end %>
            <table class="table"></table>
            <div class="row"></div>
            <h2 class="mt-3">New book</h2>
            <from action="/bookers2/books" accept-charset="UTF-8" method="post"></from>
          </div>
          <div class="col-md-8 offset-md-1"></div> 
+         <h2>books</h2>
+         
+
+
+
+
+
        </div>
      </div>
    </main>     
@@ -33,12 +45,7 @@
 <% @books.each do |book| %>
   <p><%= book.body %></p>
 <% end %>
-<h2>画像</h2>
-<% if @user.image.attached? %>
-  <%= image_tag @user.image, size: "300x300" %>
-<% else %>
-  <%= image_tag "no_image", size: "300x300" %>
-<% end %>
+
 <%= link_to "編集", edit_user_path(@user.id) %>
 <%= link_to "削除", user_path(@user.id), method: :delete, data: { confirm: "本当に削除しますか？" } %>
 <div>
