--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,16 +6,7 @@
        <div class="container px-5 px-sm-0">
         <div class="row">
          <div class="col-md-3">
-           <h2>User info</h2>
-           <% if @user.image.attached? %>
-            <%= image_tag @user.image, size: "100x100" %>
-            <% else %>
-             <%= image_tag "no_image", size: "100x100" %>
-           <% end %>
-           <table class="table"></table>
-           <div class="row"></div>
-           <h2 class="mt-3">New book</h2>
-           <from action="/bookers2/books" accept-charset="UTF-8" method="post"></from>
+           <%= render 'user_info', user: @user%>
          </div>
          <div class="col-md-8 offset-md-1"></div> 
          <h2>books</h2>
