--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -1,1 +1,18 @@
-<h1>Aboutページ</h1>
+<div class="container-fluid mt-5">
+  <div class="header row">
+    <div class="mx-auto">
+      <div class="col">
+        <h2>welcome to <i class="fas fa-book"></i>Bookers !!</h2>
+        <p>In <i class="fas fa-book"></i>Bookers,</p>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="container-fluid mt-5">
+  <div class="footer row">
+    <div class="mx-auto">
+      <p>CopyRight Infratop.inc</p>
+    </div>
+  </div>
+</div>
