--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,24 +1,40 @@
-<h1>Book一覧</h1>
-
-<div class="user-profile">
-  <h2>プロフィール</h2>
-
-  <p><strong>名前：</strong><%= current_user.name %></p>
-  <p><strong>自己紹介：</strong><%= current_user.introduction %></p>
-
-  <%= link_to "プロフィールを編集する", edit_user_path(current_user), class: "btn btn-primary" %>
-</div>
-
-<% @books.each do |book| %>
-  <div class="book">
-    <!-- 画像がある場合だけ表示 -->
-    <% if book.image.attached? %>
-      <%= image_tag book.image, width: 200, height: 200 %>
-    <% else %>
-      <p>画像はありません</p>
-    <% end %>
-
-    <!-- タイトルの表示 -->
-    <p><%= book.title %></p>
+<% if flash[:alert].present? %>
+  <div class="alert alert-danger">
+    <%= flash[alert] %>
   </div>
 <% end %>
+
+<div class="container">
+  <div class="row">
+    <div class="col-md-3">
+       <%= render 'books/book', books: @books, user: @user %>
+    </div>
+
+    <div class="col-md-8 offset-md-1">
+       <h1>Books</div>
+          <table class="table">
+            <thead>
+              <th></th>
+              <th>Title</th>
+              <th>Opinion</th>
+            </thead>
+            <tbody>
+            <% @users.each do |user| %>
+            <% user.books.each do |book| %>
+              <tr>
+                <td>
+                  <%= link_to user_path(book.user) do %>
+                  <%= image_tag book.user.get_profile_image(100, 100) %>
+                  <% end %>
+                </td>
+                <td><%= link_to book.title, book_path(book) %></td>
+                <td><%= book.body %></td>
+              </tr>
+            <% end %>
+            <% end %>
+            </tbody>
+          </table>
+        </div>
+      </div>
+    </div>
+    <%= render 'books/footer' %>
