--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,9 +1,42 @@
-<h1>Welcome to <i class="fas fa-book"></i> Bookers!!</h1>
-<p>In <i class="fas fa-book"></i> Bookers,</p>
+<% if notice %>
+  <p class="alert alert-success bg-white"><%= notice %></p>
+<% end %>
 
-<p>you can share and exchange your opinions, impressions, and emotions</p>
 
-<p>about various books!</p>
+<% if user_signed_in? %>
+  <div class="container-fluid mt-5">
+    <div class="header row">
+      <div class="mx-auto">
+        <div class="col">
+          <h1>Welcome to <i class="fas fa-book"></i> Bookers!!</h1>
+          <p>In <i class="fas fa-book"></i> Bookers,</p>
+          <p>you can share and exchange your opinions, impressions, and emotions</p>
+          <p>about various books!</p>
+        </div>
+        <div class="btn-box col-10 mx-auto mt-5">
+          <div class="row">
+            <a class="btn btn-info btn-sm btn-block mb-3 sign_in" href="/users/sign_in">log in</a>
+          </div>
+          <div class="row">
+            <a class="btn btn-success btn-sm btn-block sign_up" href="/users/sign_up">sign_up</a>
+          </div>
+        </div>
+      </div>
+   </div>
+ </div>
+<% else %>
+ <div class="container-fluid mt-5">
+   <div class="header row">
+     <div class="mx-auto">
+       <div class="col">
+         <h2>welcome to <i class="fas fa-book"><Bookers !!</h2>
+         <p>In <i class="fas fa-book"></i>Bookers,</p>
+         <p>you can share and exchange your opinions, impressions, and emotions</p>
+         <p>about various books!</p>
+       </div>
+
+       
+
 
 
 <div class="auth-links">
