--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -34,24 +34,17 @@
          <p>you can share and exchange your opinions, impressions, and emotions</p>
          <p>about various books!</p>
        </div>
+       <div class="btn^box col-10 mz-auto mt-5">
+         <div class="row">
+           <a class="btn btn-info btn-sm btn-block mb-3 sign-in" href="/users/sign_in">log_in</a>
+         </div>
+         <div class="row">
+           <a class="btn btn-success btn-sm btn-block sign_up" href="/users/sign_up">sign up</a>
+         </div>
+       </div> 
+     </div>   
+   </div>
+ </div>
+<% end %>
 
-       
-
-
-
-<div class="auth-links">
-  <%= link_to 'Login', new_user_session_path, class: "btn btn-info btn-sm btn-block mb-3" %>
-  <%= link_to 'Sign up', new_user_registration_path, class: "btn btn-success btn-sm btn-block mb-3" %>
-</div>
-
-
-<p id="notice"></p>
-<div class="container">
-  <div class="row">
-    <div class="mx-auto col-11 col-sm-10 col-lg-8 col-xl-6"></div>
-  </div>
-</div>
-
-<footer>
-  <p>CopyRight Infratop.inc</p>
-</footer>
+<% render 'books/footer' %>
