--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,8 +1,45 @@
-<h2>プロフィール編集</h2>
-<%= form_with model: User do |f| %>
-  <label for="inputName">Name</label>
-  <%= f.text_field :name, autofocus: true, id:"inputName", placeholder:"名前"%>
-  <label for="inputImage">ProfileImage</label>
-  <%= f.file_field :profile_image, placeholder: "プロフィール画像", accept: "image/*" %>  
-  <%= f.submit "変更を保存" %>
+<% if @user.errors.any? %>
+  <viv id="error_explanation">
+    <h2><%= pluralize(@user.errors.count, "error") %> prohibited this user from being saved:</h2>
+    <ul>
+      <% @user.errors.full.massages.each do |massages| %>
+        <li><%= massages %></li>
+      <% end %>
+    </ul>
+  </div>
 <% end %>
+
+<div class="container-fluid mt-5">
+  <div class="header row">
+    <div class="mx-auto">
+      <div class="col">
+        <h2>User info</h2>
+      </div>
+
+
+      <%= form_with model: @user do |f| %>
+        <div class="row mt-1">
+          <label for="inputName">Name</label>
+        </div>
+        <div class="row">
+          <%= f.text_field :name, autofocus: true, id:"inputName", placeholder:"名前"%>
+        </div>
+        <div class="row mt-3">
+          <label for="inputimage">Image</label>
+        </div>
+        <div class="row">
+          <%= f.file_field :profile_image, placeholder: "プロフィール画像", accept: "image/*" %>
+        </div>
+        <div class="row mt-3">
+          <label for="inputIntroduction">introduction</label>
+        </div>
+        <div class="row">
+          <%= f.text_area :introduction %>
+        </div>
+        <div class="row mt-3">
+          <%= f.submit "Update User" %>
+        </div>
+      <% end %>
+    </div>
+  </div>
+</div>
