--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,3 +1,5 @@
+<h1 class="text-center my-4">Book detail</h1>
+
 <% if notice %>
    <div class="alert alert-success bg-white">
         <%= notice %>
