--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,40 +1,37 @@
-<h1>投稿一覧</h1>
-<% @users.each do |user| %>
-  <p id="notice"><%= notice %></P>
-
-   <%= render 'user_info', user: @user%>
-
-   <div class="container">
+<div class="container">
     <div class="row">
-     <div class="col-lg-4">
-    </div>   
-    <div class="col-lg-8">
-       <table class="table table-striped">
-            <thead>
-                <tr>
-                  <th>Books</th>
-                  <th>Title</th>
-                  <th>Opinion</th>
-                  <th colspan="2"></th>
-                </tr>
-            </thead>
-       <tbody>     
+    <div class="col-md-3">
+       <%= render 'books/book', books: @books,user: @user %>
+    </div>
 
+    <div class="col-md-8 offset-md1">
 
+    <h1>Users</h1>
+      <table class="table">
+       <thead>
+          <tr>
+            <th>Books</th>
+            <th>Title</th>
+            <th></th>
+          </tr>
+          <% @books.each do |book| %
+          <tr>
+            <td><%= image_tag book.user.get_profile_image(100,100) %></td>
+            <td><%= book.user.name %></td>
+            
+            <td>
+              <% if book.user ==current_user %>
+                <%= link_to 'show', user_path(current_user) %>
+              <% else %>
+                <%= link_to 'show', user_path(book.user) %>
+              <% end %>
+            </td>
+          </tr>
+          <% end %>
+        </thead>
+      </table>
+    </div>
+  </div>
+</div>
 
-
-
-    <p>タイトル</p>
-    <span>
-      <%=link_to user.name, user_path(user.id) %>
-    </span>
-
- <table class="table table-striped">
-    <p>画像</p>
-    <% if user.image.attached? %>
-      <%= image_tag user.image, size: "200x200" %>
-    <% else %>
-      <%= image_tag 'no_image', size: "200x200" %>
-    <% end %>
- </table>
-<% end %>
+<%= render 'books/footer' %>
