--- a/app/views/books/_book.html.erb
+++ b/app/views/books/_book.html.erb
@@ -1,8 +1,6 @@
-<div>
-
-  <h1>User info</h1>
-    <% if @user.present?>
-      <%= image_tag @user.get_profile_image(100, 100)%>
+<h1>User info</h1>
+    <% if @user.present? %>
+      <%= image_tag @user.get_profile_image(100, 100) %>
       <hr>
         <p>name: <%= @user.name %></p>
       <% if @user.introduction.present? %>
@@ -26,14 +24,18 @@
     <% @newbook ||= Book.new %>
 
   <h1>New book</h1>
-    <%= from_for @newbook do |f| %>
-      <div class="field">
-        <%= f.label :title %><br>
-        <%= f.text_field :title %>
-      </div>
-      <div class="field">
-        <%= f.label :body %><br>
-        <%= f.text_area :body %>
-      </div>
-      <div class="row ml-5">
-        <%= f.submit 'creste Book', classS    
+  <%= form_with model: @new_book do |f| %>
+    <div class="field">
+         <!-- f.label :title 入力する事でcode内では小文字でもサイト上では大文字になる。 -->
+      <%= f.label :title %><br>
+         <!--小さい文字入力出来るフィールドが出来る。-->
+      <%= f.text_field :title %>
+    </div>
+    <div class="field">
+      <%= f.label :opinion %><br>
+      <%= f.text_area :body %>
+    </div>
+    <div class="row ml-5">
+      <%= f.submit 'Creste Book' %>
+    </div>
+  <% end %>    
