--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,7 +1,7 @@
 <h1 class="text-center my-4">Book detail</h1>
 
 <% if notice %>
-   <div class="alert alert-success bg-white">
+    <div class="alert alert-success bg-white">
         <%= notice %>
     </div>
 <% end %>
@@ -9,21 +9,20 @@
 <div class="container"
   <div class="row">
       <div class="col-md-3">
-      <%= render 'books/book', books: @books, user: @user %>
+        <%= render 'books/book', books: @books, user: @user %>
       </div>
-
        <div class="col-md-8 offset-md-1">
          <h1>Book detail</h1>
          <table class="table">
          </tbody>
            <tr>
              <td>
-                 <%= link_to user_path(book.user) do %>
+                 <%= link_to user_path(@book.user) do %>
                    <%= image_tag @book.user.get_profile_image(100, 100) %><br>
                    <%= @book.user.name %>
                  <% end %>
              </td>
-             <td><%= link_to @book.title, bookpath(@book) %></td>
+             <td><%= link_to @book.title, book_path(@book) %></td>
              <td><%= @book.body %></td>
              <% if @book.user_id ==current_user.id %>
                <td><%= link_to "Edit", edit_book_path(@book), class:"btn btn-success"%></td>
