--- a/app/views/users/_user_info.html.erb
+++ b/app/views/users/_user_info.html.erb
@@ -1,21 +1,21 @@
 <h2>User info</h2>
 <% if user.profile_image.attached? %>
-<%= image_tag user.profile_image, size: "100x100" %>
-<% else %>
-  <%= image_tag "no_image", size: "100x100" %>
+    <%= image_tag url_for(user.profile_image), size: "100x100" %>
+  <% else %>
+    <%= image_tag "no_image.png", size: "100x100" %>
 <% end %>
 <table class="table">
   <tbody>
     <tr>
       <th scope="row">name</th>
       <td>
-      <%=user.name %>
+        <%= user.name %>
       </td>
     </tr>
     <tr>
       <th scope="row">introduction</th>
       <td>
-      <%=user.introduction %>
+        <%= user.introduction %>
       </td>
     </tr>
   </tbody>
@@ -23,4 +23,18 @@
 <div class="row">
 </div>
 <h2 class="mt-3">New book</h2>
-<from action="/bookers2/books" accept-charset="UTF-8" method="post"></from>
+<%= form_with model: @new_book do |f| %>
+  <div class="field">
+    <!-- f.label :title 入力する事でcode内では小文字でもサイト上では大文字になる。-->
+    <%= f.label :title %><br>
+    <!--小さい文字入力出来るフィールドが出来る。-->
+    <%= f.text_field :title %> 
+  </div>
+  <div class="field">
+    <%= f.label :opinion %><br>
+    <%= f.text_area :body %>
+  </div>
+  <div class="row ml-5">
+    <%= f.submit 'creste Book'  %>
+  </div>
+<% end %>
