--- a/app/views/books/_book.html.erb
+++ b/app/views/books/_book.html.erb
@@ -36,6 +36,6 @@
       <%= f.text_area :body %>
     </div>
     <div class="row ml-5">
-      <%= f.submit 'Creste Book' %>
+      <%= f.submit 'Creste Book', class: "btn btn-success" %>
     </div>
   <% end %>    
