--- a/app/views/users/_user_info.html.erb
+++ b/app/views/users/_user_info.html.erb
@@ -21,7 +21,11 @@
   </tbody>
 </table>
 <div class="row">
-</div>
+  <td><%= link_to class:"btn btn-outline-secoudary" "btn-block" %></td>
+    <i class="fas fa-user-cog">
+    </i>
+  </>
+  </div>
 <h2 class="mt-3">New book</h2>
 <%= form_with model: @new_book do |f| %>
   <div class="field">
@@ -35,6 +39,6 @@
     <%= f.text_area :body %>
   </div>
   <div class="row ml-5">
-    <%= f.submit 'creste Book'  %>
+    <%= f.submit 'creste Book',  class: "btn btn-success"   %>
   </div>
 <% end %>
