--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -16,7 +16,8 @@
           </tr>
           <% @books.each do |book| %
           <tr>
-            <td><%= image_tag book.user.get_profile_image(100,100) %></td>
+            <%= image_tag book.user.get_profile_image(100,100) %>
+            </td>
             <td><%= book.user.name %></td>
             
             <td>
