--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,3 +1,21 @@
 <h1>Editing Book</h1>
-<%= from_for(@book) do |f| %>
-   <% if @book.errors.any? %>
+
+<%= form_with model: @book, local: true do |f| %>
+  <% if @book.errors.any? %>
+    <%= render "error", model: @book %>
+  <% end %>
+
+  <div class="field">
+    <%= f.label :title %><br>
+    <%= f.text_field :title %>
+  </div>
+
+  <div class="field">
+    <%= f.label :body %><br>
+    <%= f.text_area :body, rows: 6 %>
+  </div>
+
+  <div class="actions">
+    <%= f.submit "Update Book" %>
+  </div>
+<% end %>
