--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -6,7 +6,7 @@
     </div>
 <% end %>
 
-<div class="container"
+<div class="container" >
   <div class="row">
       <div class="col-md-3">
         <%= render 'books/book', books: @books, user: @user %>
