--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -11,11 +11,11 @@
   </div>
 
   <div class="field">
-    <%= f.label :body %><br>
+    <%= f.label :opinion %><br>
     <%= f.text_area :body, rows: 6 %>
   </div>
 
   <div class="actions">
-    <%= f.submit "Update Book" %>
+    <%= f.submit 'Update Book',  class: "btn btn-success"   %>
   </div>
 <% end %>
