--- a/app/views/users/_user_info.html.erb
+++ b/app/views/users/_user_info.html.erb
@@ -2,7 +2,7 @@
 <% if user.profile_image.attached? %>
     <%= image_tag url_for(user.profile_image), size: "100x100" %>
   <% else %>
-    <%= image_tag "no_image.png", size: "100x100" %>
+    <%= image_tag "no_image.jpg", size: "100x100" %>
 <% end %>
 <table class="table">
   <tbody>
@@ -21,11 +21,10 @@
   </tbody>
 </table>
 <div class="row">
-  <%= link_to(edit_user_path(user), class:"btn btn_outline_secoudary btn-block") do %>
-    <i class="fas fa-user-cog">
-    </i>
-    <% end %>
-  </div>
+  <%= link_to(edit_user_path(user), class:"btn btn_outline_secondary btn-block") do %>
+    <i class="fas fa-user-cog"></i>
+  <% end %>
+</div>
 <h2 class="mt-3">New book</h2>
 <%= form_with model: @new_book do |f| %>
   <div class="field">
