--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -18,4 +18,7 @@
   <div class="actions">
     <%= f.submit 'Update Book',  class: "btn btn-success"   %>
   </div>
+   <%= link_to "Show", book_path(@book.id) %>
+    |
+   <%= link_to "Back", books_path %>
 <% end %>
