--- a/app/views/users/_user_info.html.erb
+++ b/app/views/users/_user_info.html.erb
@@ -26,7 +26,7 @@
   <% end %>
 </div>
 <h2 class="mt-3">New book</h2>
-<%= form_with model: @new_book do |f| %>
+<%= form_with model: @newbook do |f| %>
   <div class="field">
     <!-- f.label :title 入力する事でcode内では小文字でもサイト上では大文字になる。-->
     <%= f.label :title %><br>
@@ -39,6 +39,6 @@
     <%= f.text_area :body %>
   </div>
   <div class="row ml-0">
-    <%= f.submit 'creste Book',  class: "btn btn-success"   %>
+    <%= f.submit 'Create Book',  class: "btn btn-success"   %>
   </div>
 <% end %>
