--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,8 +1,10 @@
-<% if flash[:alert].present? %>
-  <div class="alert alert-danger">
-    <%= flash[alert] %>
-  </div>
+<div class="alert alert-danger">
+  <% if @newbook.errors.any? %>
+  <%= render "error", model: @newbook %>
 <% end %>
+  
+  </div>
+
 
 <div class="container">
   <div class="row">
